# emis-qa

./: .flake8  .gitignore  README.md  project.yaml  pyproject.toml  requirements.dev.txt  requirements.txt
analysis/: common_variables.py  concat_study_population.py  concat_study_populations.py  null-dates-join-to-snomed.py  null_dates_tpp.sql  other-tables-investigate-overlaps.py  other-tables-join-to-snomed.py  rotate_study_population.py  study_definition.py  utils.py
notebooks/: summary.ipynb  utils.py
released-outputs/other-tables/: allergy.csv  allergy_codelist.csv  allergy_obs.csv  imms_obs.csv  immunisation.csv  immunisation_codelist.csv
released-outputs/unknown-dates-tpp/: 1899.csv  1899_with_descriptions.csv  1900.csv  1900_with_descriptions.csv  1901.csv  1901_with_descriptions.csv
released_outputs/: README.md  summary.html
tests/: test_notebooks_utils.py
